[project]
name = "os-in-python"
version = "0.1.0"
description = "This is my 1st Python Poetry project"
authors = [
    {name = "PL",email = "petro.lototskyi@gmail.com"}
]
license = {text = "Me"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
